@@ -419,7 +419,9 @@ extern int ClVerifyObjImplLevel(ClVersionRecord* vr);
 extern const char *ClObjectGetClString(ClObjectHdr *hdr, ClString *id);
 extern const CMPIData *ClObjectGetClArray(ClObjectHdr *hdr, ClArray *id);
 extern void *ClObjectGetClSection(ClObjectHdr *hdr, ClSection *s);
+extern int ClClassAddQualifierSpecial(ClObjectHdr *hdr, ClSection *qlfs, const char *id, CMPIData d, ClObjectHdr *arrHdr);
 extern int ClClassAddQualifier(ClObjectHdr *hdr, ClSection *qlfs, const char *id, CMPIData d);
+extern int ClClassAddPropertyQualifierSpecial(ClObjectHdr *hdr, ClProperty *p, const char *id, CMPIData d, ClObjectHdr *arrHdr);
 extern int ClClassAddPropertyQualifier(ClObjectHdr *hdr, ClProperty *p, const char *id, CMPIData d);
 extern int ClClassAddMethodQualifier(ClObjectHdr *hdr, ClMethod *m, const char *id, CMPIData d);
 extern int ClClassAddMethParamQualifier(ClObjectHdr *hdr, ClParameter *p,const char *id, CMPIData d);
