@@ -20,6 +20,7 @@ Bugs fixed:
 - 1717262 Fixed sfcb might not properly return the hostname for some calls
 - 1724370 Fixed sfcb can run out of file handles
 - 1724719 Fixed constClass leaks memory
+- 1724753 Fixed qualifier creation support for classes
 
 Changes in 1.2.2
 ================
